# optmonster

./: .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  optmonster.db  pyproject.toml
.github/workflows/: secrets-scan.yml
alembic/: env.py
alembic/versions/: 20260312_0001_initial_schema.py  20260312_0002_phase2a_action_requests.py  20260312_0003_phase2b_console_and_actions.py  20260313_0004_account_follower_snapshots.py  20260313_0005_fetch_schedule_runtime.py  20260313_0006_ai_log_records.py  20260313_0007_ai_log_fetched_tweet.py  20260317_0008_fetched_tweet_engagement_metrics.py
app/: __init__.py  main.py  worker.py
app/accounts/: __init__.py  cookie_import.py  loader.py  registry.py  schemas.py  service.py
app/actions/: executor.py  schemas.py  service.py  writing_guides.py
app/api/: deps.py
app/api/routes/: admin.py  system.py  ui.py
app/fetching/: __init__.py  browser_fallback.py  datasource.py  errors.py  factory.py  schemas.py  service.py  text_extract.py  twikit_source.py
app/llm/: __init__.py  schemas.py  service.py
app/runtime/: __init__.py  container.py  database.py  enums.py  models.py  redis.py  settings.py
app/ui/: account.html  admin.html  ai.html  ai_logs.html  groups.html  replies.html  theme.css  tweets.html
config/ai/: prompts.yaml
config/environments/: dev.env.example  prod.env.example
tests/: conftest.py  test_accounts.py  test_actions.py  test_fetching.py  test_llm_service.py
